<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourite_btn">Favourite</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_song">Total Songs</string>
    <string name="title">World Of Music</string>
    <string name="start">00:00</string>
    <string name="end">5:00</string>
    <string name="repeat">Repeat</string>
    <string name="equilizer">Equilizer</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>
    <string name="favourite">Favourites</string>
    <string name="song_image">Song Image</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="playlist">Playlists</string>
    <string name="app_icon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="text_nav">Welcome to\nWorld of Music</string>
    <string name="song_album">Song Album</string>
    <string name="my_song">My Song</string>
    <string name="music_name">Music name</string>
</resources>