<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1"
    tools:context=".Player_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/song_image"
            android:src="@drawable/previous_icon"
            app:tint="@color/cool_green" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#46BDF3"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights" />

        <ImageView
            android:layout_width="30dp"
            android:src="@drawable/favourite_hollow_icon"
            app:tint="#CC4343"
            android:layout_height="30dp"
            android:contentDescription="@string/favourite" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImage"
        android:layout_width="250dp"
        android:layout_weight="1"
        android:layout_height="250dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#0F6FE3"
        app:strokeWidth="5dp"
        app:srcCompat="@drawable/music_icon" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/my_song"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconSize="35dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/cool_green"
            android:contentDescription="@string/previous"
            app:icon="@drawable/previous_icon" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/play_pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconSize="50dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#EA0B0B"
            app:iconTint="@color/white"
            android:contentDescription="@string/play"
            app:shapeAppearanceOverlay="@style/curved"
            app:icon="@drawable/pause_icon" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconSize="48dp"
            android:contentDescription="@string/next"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/cool_green"
            app:icon="@drawable/next_icon" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/start" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/seekbarEnd"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat"
            android:minHeight="48dp"
            android:src="@drawable/repeat_icon"
            app:tint="@color/cool_green"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equilizer"
            android:minHeight="48dp"
            android:src="@drawable/euqilizer"
            app:tint="@color/cool_green" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer"
            android:minHeight="48dp"
            android:src="@drawable/time_icon"
            app:tint="@color/cool_green" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:minHeight="48dp"
            android:src="@drawable/share_icon"
            app:tint="@color/cool_green" />

    </LinearLayout>

</LinearLayout>