<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/music_icon"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/song_duration"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:layout_toEndOf="@id/image_view"
        android:text="@string/music_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/song_album"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/song_duration"
        android:layout_toEndOf="@id/image_view"
        android:text="@string/song_album"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textColor="#8A8A8A" />


    <TextView
        android:id="@+id/song_duration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/black" />


</RelativeLayout>