<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/suffle_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:drawableTint="@color/teal_200"
                android:textColor="@color/teal_200"
                android:drawableTop="@drawable/suffle_icon"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/shuffle_btn" />

            <Button
                android:id="@+id/favourite_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:drawableTop="@drawable/playlist_icon"
                android:drawableTint="#50D617"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="@string/favourite_btn"
                android:textColor="#50D617" />

            <Button
                android:id="@+id/play_pause_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTint="#E83C3C"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#E83C3C"
                android:drawableTop="@drawable/favourite_icon"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/playlist_btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/totalSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:textColor="#064BE3"
            android:text="@string/total_song" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>